--- a/proyect.html
+++ b/proyect.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corazón 3D con Mensajes de Amor</title>
+    <title>Yeraldin<3</title>
     <style>
         /* Estilos existentes */
         body {
@@ -479,4 +479,5 @@
         });
     </script>
 </body>
+
 </html>
