--- a/proyect3.html
+++ b/proyect3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestra Historia - Capítulo 2</title>
+    <title>Yeraldin<3</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -671,4 +671,5 @@
         });
     </script>
 </body>
+
 </html>
