--- a/proyect4.html
+++ b/proyect4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestro Futuro</title>
+    <title>Nos casamos?</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -550,4 +550,5 @@
         });
     </script>
 </body>
+
 </html>
